# jupyter-cloud-scoped-creds

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  EXPLANATION.md  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/reference/: changelog.md
jupyter-config/jupyter_notebook_config.d/: jupyter_cloud_scoped_creds.json
jupyter-config/jupyter_server_config.d/: jupyter_cloud_scoped_creds.json
jupyter_cloud_creds/: __init__.py  _version.py  handlers.py
jupyter_cloud_scoped_creds/: __init__.py
jupyter_notebook_config.d/: jupyter_cloud_scoped_creds.json
tests/: conftest.py  test_handlers.py
